--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,18 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 7px rgba(0, 0, 0, 0.9);
+
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 7px rgba(0, 0, 0, 0.9);
+}
 }
 
 .banner-content h2 {
   margin: 0;
 
   font-size: 3rem;
+
 }
 
 .banner-content p {
@@ -42,6 +48,7 @@ body {
 
   font-size: 1.5rem;
   font-style: italic;
+
 }
 
 .star {
@@ -52,4 +59,5 @@ body {
   width: 30px;
 
   background: url("../images/star.svg") no-repeat center center / contain transparent;
+  transition: all 2s ease;
 }
