--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ body {
   text-align: center;
   text-shadow: 0 1px 7px rgba(0, 0, 0, 0.9);
 }
-}
 
 .banner-content h2 {
   margin: 0;
@@ -58,6 +57,20 @@ body {
   top: 0;
   width: 30px;
 
+  transform-origin: center center;
   background: url("../images/star.svg") no-repeat center center / contain transparent;
-  transition: all 2s ease;
+  animation: twinkle 3s infinite alternate;
+}
+
+@keyframes twinkle {
+
+  0% {
+    width: 30px;
+    height: 30px;
+  }
+
+  100% {
+    width: 50px;
+    height: 50px;
+  }
 }
